[package]
name = "open_secrets"
authors = ["Wiley McKay Conte <wiley@populist.us>"]
description = "A client wrapper for the Open Secrets REST API"
license = "MIT/Apache-2.0"
version = "0.1.4"
edition = "2021"
homepage = "https://github.com/populist-vote/open-secrets"
documentation = "https://docs.rs/open-secrets"
repository = "https://github.com/populist-vote/open-secrets"
readme = "README.md"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.6", features = ["json"] }
serde_json = "1.0.71"
tokio = { version = "1.21.1", features = ["full"] }